refactor(api): remove institution role creation route
