# api/lib/controllers/openapi.json
@@ -3142,73 +3142,6 @@
         "x-internal": false
       }
     },
-    "/institutions/{id}/_create_roles": {
-      "parameters": [
-        {
-          "schema": {
-            "type": "string"
-          },
-          "name": "id",
-          "in": "path",
-          "required": true
-        }
-      ],
-      "post": {
-        "summary": "Create institution roles",
-        "operationId": "post-institutions-id-_create_roles",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string",
-                        "description": "The role name"
-                      },
-                      "created": {
-                        "type": "boolean",
-                        "description": "Wether the role has been created or not"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        },
-        "description": "Register the institution roles in Elasticsearch",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "tags": [
-          "Administration",
-          "Institutions"
-        ]
-      }
-    },
     "/institutions/{id}/_migrate_creator": {
       "parameters": [
         {
